[gd_scene load_steps=5 format=2]

[ext_resource path="res://KanjiInfo.gd" type="Script" id=1]
[ext_resource path="res://Assets/LINE_Seed_JP/App/OTF/LINESeedJP_A_OTF_Rg.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/LINE_Seed_Sans_EN/App/OTF/LINESeedSans_A_Rg.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )
fallback/0 = ExtResource( 2 )

[node name="KanjiInfo" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="NavigationContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0

[node name="InfoContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 1024.0
margin_bottom = 54.0

[node name="KanjiTitle" type="VBoxContainer" parent="VBoxContainer/InfoContainer"]
margin_right = 143.0
margin_bottom = 50.0

[node name="KanjiLabel" type="Label" parent="VBoxContainer/InfoContainer/KanjiTitle"]
margin_right = 143.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "KANJI GOES HERE"

[node name="KanjiDrawn" type="TextureRect" parent="VBoxContainer/InfoContainer/KanjiTitle"]
margin_top = 26.0
margin_right = 143.0
margin_bottom = 26.0

[node name="KanjiInfo" type="VBoxContainer" parent="VBoxContainer/InfoContainer"]
margin_left = 147.0
margin_right = 147.0
margin_bottom = 50.0

[node name="OnYomi" type="Label" parent="VBoxContainer/InfoContainer/KanjiInfo"]
margin_bottom = 14.0

[node name="KunYomi" type="Label" parent="VBoxContainer/InfoContainer/KanjiInfo"]
margin_top = 18.0
margin_bottom = 32.0

[node name="Example" type="Label" parent="VBoxContainer/InfoContainer/KanjiInfo"]
margin_top = 36.0
margin_bottom = 50.0
